add endpoint item of categorie + update doc
